--- a/PROJECT/portfolio-project/css/style.css
+++ b/PROJECT/portfolio-project/css/style.css
@@ -23,29 +23,28 @@ a{
   display: flex;
   z-index: 100;
 }
-.logo 
+.header .logo 
 {
   height: 80px;
   width: 50%;
   display: flex;
   align-items: center;
 }
-.logo a{
+.header .logo a{
   font-size: 30px;
   color: #0ef;
   text-decoration: none;
   font-weight: 600;
   margin-left: 20%;
 }
-.logo i{
+.header .logo i{
   font-size: 30px;
   display: flex;
   margin-left: 50%;
-  display: none;
-  
+  display: none; 
 }
 /* side bar start */
-.sidebar {
+.header .logo .sidebar {
   height: 100%;
   width: 0;
   position: fixed;
@@ -56,8 +55,7 @@ a{
   transition: 0.5s;
   padding-top: 60px;
 }
-
-.sidebar a {
+.header .logo .sidebar a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
@@ -65,12 +63,10 @@ a{
   display: block;
   transition: 0.3s;
 }
-
-.sidebar a:hover {
+.header .logo .sidebar a:hover {
   color:  #30CED8;
 }
-
-.sidebar .closebtn {
+.header .logo .sidebar .closebtn {
   position: absolute;
   top: 0;
   right: 25px;
@@ -78,15 +74,14 @@ a{
   margin-left: 50px;
 }
 /* side bar end */
-
-.navbar{
+.header .navbar{
   height: 80px;
   width: 50%;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-.navbar a{
+.header .navbar a{
   display: inline-block;
   border-radius: 40px;
   padding: 3px 8px 3px 8px;
@@ -96,7 +91,7 @@ a{
   font-weight: 500;
   transition: .3s;
 }
-.navbar a:hover{
+.header .navbar a:hover{
   color: white;
   box-shadow: 0 0 20px cyan; 
 }
@@ -111,30 +106,30 @@ a{
   align-items: center;
   padding: 13% 0 13% 10%;
 }
-.home-content{
+.home .home-content{
   width: 50%;
   animation: slideRight 1s ease forwards;
 }
-.home-content h3{
+.home .home-content h3{
   font-size: 32px;
   font-weight: 700;
   color: white;
 }
-.home-content span{
+.home .home-content span{
   font-size: 32px;
   color: #0ef;
 }
-.home-content h1{
+.home .home-content h1{
   font-size: 56px;
   font-weight: 700;
   margin: -3px 0;
   color: white;
 }
-.home-content p{
+.home .home-content p{
   font-size: 20px;
   color: white;
 }
-.home-sci a{
+.home .home-content .home-sci a{
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -148,12 +143,12 @@ a{
   text-decoration: none;
   margin: 30px 15px 30px 0;
 }
-.home-sci a:hover{
+.home .home-content .home-sci a:hover{
   background: #0ef;
   color: #081b29;
   box-shadow: 0 0 20px #0ef;
 }
-.btn-box{
+.home .home-content .btn-box{
   display: inline-block;
   padding: 12px 28px;
   background: #0ef;
@@ -164,13 +159,13 @@ a{
   text-decoration: none;
   font-weight: 600;
 }
-.btn-box:hover{
+.home .home-content .btn-box:hover{
   box-shadow: 0 0 20px cyan;
 }
-.person{
+.home .person{
   width: 50%;
 }
-.person .person-img{
+.home .person .person-img{
   height: 300px;
   width: 300px;
   background: url(../images/person.jpg);
@@ -180,7 +175,7 @@ a{
   margin-left: 20%;
   box-shadow: 0 0 20px cyan; 
 }
-.person .person-img:hover{
+.home .person .person-img:hover{
   box-shadow: 0 0 40px cyan; 
   transition: 0.2s;
 }
@@ -202,18 +197,18 @@ a{
 {
   padding-top: 50px;
 }
-.my-profile{
+.about-section .my-profile{
   width: 80%;
   padding-top: 50px;
   height: auto;
   margin: auto;
 }
-.my-profile .profile-section-1 h2{
+.about-section .my-profile .profile-section-1 h2{
   font-size: 45px;
   position: relative;
   text-align: center;
 }
-.my-profile h2::after,.my-profile h2::before{
+.about-section .my-profile h2::after,.my-profile h2::before{
   content: "";
   width: 68px;
   height: 4px;
@@ -223,51 +218,50 @@ a{
   top: 110%;
   left: 47%;
 }
-.my-profile h2::before{
+.about-section .my-profile h2::before{
   width: 44px;
   top: 130%;
   left: 48%;
 }
-.profile-section-1,.profile-section-2{
+.about-section .my-profile .profile-section-1,.profile-section-2{
   width: 100%;
   height: auto;
 }
-.profile-section-2{
+.about-section .my-profile .profile-section-2{
   height: auto;
   padding: 23px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.profile-section-2 .part-1{
+.about-section .my-profile .profile-section-2 .part-1{
   width: 50%;
   height: 100%;
   margin: auto;
   display: grid;
   grid-gap: 20px;
 }
-.profile-section-2 .part-1 .content{
+.about-section .my-profile .profile-section-2 .part-1 .content{
   padding: 10px;
   font-size: 20px;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
-.profile-section-2 .part-1 .content:hover
+.about-section .my-profile .profile-section-2 .part-1 .content:hover
  {
   background: #2E5A88;
   color: white;
  }
-
-.my-profile .profile-section-1 p{
-    font-size: 26px;
-    padding-top: 40px;
-    text-align: center;
+.about-section .my-profile .profile-section-1 p{
+  font-size: 26px;
+  padding-top: 40px;
+  text-align: center;
 }
-.my-profile .profile-section-1 b{
+.about-section .my-profile .profile-section-1 b{
   color:  #2E5A88;
   text-align: center;
 }
-.my-profile .profile-section-1 h4{
+.about-section .my-profile .profile-section-1 h4{
   font-weight: normal;
   padding-top: 22px;
   line-height: 27px;
@@ -275,10 +269,9 @@ a{
   padding-inline: 62px;
   font-size: 18px;
 }
-
 /* About end */
-/* skill start */
 
+/* skill start */
 .skills-department{
   width: 100%;
   height: auto;
@@ -298,52 +291,48 @@ a{
 .skills-department span{
   color:  #2E5A88;
 }
-
-.skill-card{
-display: flex;
-width: 33.33%;
-padding: 50px 0px;
-flex-direction: column;
-align-items: center;
+.skills-department .skills-row .skill-card{
+  display: flex;
+  width: 33.33%;
+  padding: 50px 0px;
+  flex-direction: column;
+  align-items: center;
 }
-.circular-progress-bar{
-position: relative;
-height: 150px;
-width: 150px;
-border-radius: 50%;
-background:conic-gradient(#7d2a7d  0deg, #ededed 0deg);
-display: flex;
-align-items: center;
-justify-content: center;
+.skills-department .skills-row .skill-card .circular-progress-bar{
+  position: relative;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  background:conic-gradient(#7d2a7d  0deg, #ededed 0deg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
-.circular-progress-bar::before{
-content: "";
-position: absolute;
-height: 135px;
-width: 135px;
-border-radius: 59%;
-background: #fff;
+.skills-department .skills-row .skill-card .circular-progress-bar::before{
+  content: "";
+  position: absolute;
+  height: 135px;
+  width: 135px;
+  border-radius: 59%;
+  background: #fff;
 }
-.progress-value{
-position: relative;
-display: flex;
+.skills-department .skills-row .skill-card .circular-progress-bar .progress-value{
+  position: relative;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
-.progress-value img{
+.skills-department .skills-row .skill-card .circular-progress-bar .progress-value img{
   border-radius: 59%;
-  
-  }
-.text{
-font-size: 22px;
-font-weight: 800;
-padding-top: 22px;
-color: #343232;
 }
-
-
+.skills-department .skills-row .skill-card .text{
+  font-size: 22px;
+  font-weight: 800;
+  padding-top: 22px;
+  color: #343232;
+}
 /* skill end  */
+
 /* Education start */
 .container4
 {
@@ -351,24 +340,23 @@ color: #343232;
   width: 80%;
   margin: auto;
 }
-.col header .title
+.container4 .col header .title
 {
   font-family: Helvetica;
   color: #11a372;
   padding: 0px 0px 20px 30px;
 }
-.col .title h2{
+.container4 .col .title h2{
   font-size: 40px;
   text-align: center;
   margin-bottom: 40px;
 }
-
-.col .contents
+.container4 .col .contents
 {
   padding: 0px 30px;
   border-left: 2px solid #bababa;
 }
-.col .contents .box
+.container4 .col .contents .box
 {
   position: relative;
   padding: 20px;
@@ -378,12 +366,12 @@ color: #343232;
   transition: all 0.4s;
   margin-bottom: 20px;
 }
-.col .contents .box:hover
+.container4 .col .contents .box:hover
 {
   box-shadow: 0px 3px 12px 0px #ccc;
   border: 1px solid transparent;
 }
-.col .contents .box::before{
+.container4 .col .contents .box::before{
   content: '';
   position: absolute;
   width: 16px;
@@ -394,32 +382,31 @@ color: #343232;
   background-color: #11a372;
   border: 2px solid white;
 }
-.box h4{
+.container4 .col .contents .box h4{
   position: relative;
   color: #11a372;
 }
-.box h3{
+.container4 .col .contents .box h3{
   font-size: 19px;
   padding: 10px 0px 6px;
   font-family:Helvetica;
   color: #444;
 }
-.contents .box p{
+.container4 .col .contents .contents .box p{
   line-height: 1.2;
   color: #666;
 }
 /* Education end */
 
-
 /* project start */
 .main-project {
   padding: 100px 0 120px 0;
 }
-.main-project .project-list1{
+.main-project .project-middle .project-item .project-list1{
   position: relative;
   height: 350px;
 }
-.main-project .project-list1 img{
+.main-project .project-middle .project-item .project-list1 img{
   object-fit: cover;
 }
 .main-project .project-head h2 {
@@ -438,7 +425,7 @@ color: #343232;
   width: 35%;
   margin: 30px 80px;
 }
-.overplay{
+.main-project .project-middle .project-item .project-list1 .overplay{
   position: absolute;
   bottom: 0;
   left: 0;
@@ -449,17 +436,16 @@ color: #343232;
   height: 0%;
   transition: 1s ease;
 }
-.main-project .project-list1:hover .overplay{
+.main-project .project-middle .project-item .project-list1:hover .overplay{
   height: 100% ;
 }
-.overplay h2{
+.main-project .project-middle .project-item .project-list1 .overplay h2{
   margin-top: 40%;
   font-size: 3vw;
   color: white;
   text-align: center;
   font-family: 'Damion',cursive;
 }
-
 /* project end */
 
 /* Contact start */
@@ -524,22 +510,22 @@ color: #343232;
   font-weight: 500;
   color: black;
 }
-.contactForm{
+.contact .container .contactForm{
   width: 40%;
   padding: 40px;
   background: #fff;
 }
-.contactForm h2{
+.contact .container .contactForm h2{
   font-size: 30px;
   color: #333;
   font-weight: 500;
 }
-.contactForm .inputBox{
+.contact .container .contactForm .inputBox{
   position: relative;
   width: 100%;
   margin-top: 10px;
 }
-.contactForm .inputBox input,textarea{
+.contact .container .contactForm .inputBox input,textarea{
   width: 100%;
   padding: 5px 0;
   margin: 10px 0;
@@ -548,7 +534,7 @@ color: #343232;
   outline: none;
   resize: none;
 }
-.contactForm .inputBox span{
+.contact .container .contactForm .inputBox span{
   position: absolute;
   left: 0%;
   padding: 5px 0;
@@ -557,16 +543,16 @@ color: #343232;
   transition: 0.5s;
   color: #666;
 }
-.contactForm .inputBox input:focus ~ span,
-.contactForm .inputBox input:valid ~ span,
-.contactForm .inputBox textarea:focus ~ span,
-.contactForm .inputBox textarea:valid ~ span
+.contact .container .contactForm .inputBox input:focus ~ span,
+.contact .container .contactForm .inputBox input:valid ~ span,
+.contact .container .contactForm .inputBox textarea:focus ~ span,
+.contact .container .contactForm .inputBox textarea:valid ~ span
 {
   color: #e91e63;
   font-size: 12px;
   transform: translateY(-20px);
 }
-.contactForm .inputBox input[type="submit"]
+.contact .container .contactForm .inputBox input[type="submit"]
 {
   width: 100px;
   background: #00bcd4;
@@ -576,10 +562,6 @@ color: #343232;
   padding: 10px;
   font-size: 18px;
 }
-
-
-
-
 /* Contact end */
 
 /*  image start */
@@ -591,7 +573,6 @@ color: #343232;
 }
 /* image end */
 
-
 /* Footer start */
 footer{
   width: 100%;
@@ -599,27 +580,19 @@ footer{
   background: #FAF9F6;
   line-height: 70px;
 }
-
 footer h2{
   font-size: 1.5vw;
 }
-
-footer h4 span{
-  color: #00a68e;
-}
-
 footer .icon li{
   display: inline-block;
   margin: 50px 10px 0px 10px;
 }
-
 footer .icon li a{
   color: #a4abb5;
   font-size: 30px;
   line-height: 43px;
   font-weight: bold;
 }
-
 footer .nav li{
   display: inline-block;
   font-size: 20px;
@@ -635,7 +608,6 @@ footer .nav li:hover a{
 footer p{
   font-size: 20px;
 }
-
 footer p span{
   color: blue;
 }
@@ -649,15 +621,10 @@ footer p span{
   align-items: center;
   background-color: rgba(41,54,81,.08);
   border-radius: 50%;
-
 }
 .share-icon:hover{
   background-color: #49413F;
   box-shadow: 0 0 5px cyan; 
   color: white;
 }
-
-
 /* Footer end */
-
-  
