--- a/PROJECT/portfolio-project/css/media.css
+++ b/PROJECT/portfolio-project/css/media.css
@@ -1,4 +1,63 @@
-@media(max-width:500px)
+@media(max-width:1200px)
+{
+    .header .navbar{
+       padding-inline: 20px ;
+      }
+}
+@media(max-width:992px)
+{
+
+.header{
+    background: white;
+}
+.header .navbar
+{
+    display: none;
+}
+.header .logo i{
+    margin-left: 140%;
+    display: block;
+}
+.home .home-content{
+    width: 100%;
+}
+
+.home .person .person-img{
+    margin-left: 55%;
+    margin-top: 50px;
+  }
+
+  .main-project .project-middle .project-item{
+    width: 60%;
+}
+
+  .container
+  {
+      flex-direction: column;
+  }
+  .contact .container .contactForm{
+    width: 60%;
+  }
+
+  footer h2{
+    font-size: 18px;
+  }
+} 
+
+@media(max-width:800px)
+{
+    .header .logo i{
+        margin-left: 130%;
+        display: block;
+    } 
+    .home .person{
+        margin-left: -4%;
+    }
+}
+
+
+
+@media(max-width:576px)
 {
 /* header start */
 .header{
@@ -22,7 +81,7 @@
 .home .person{
     width: 100%;
     padding: 50px 0 50px 0;
-    margin-left: -10%;
+    margin-left: -40%;
 }
 .home .home-content h1{
     font-size: 45px;
@@ -135,14 +194,18 @@
 	width: 100%
 }
 .contact .container .contactinfo .box .text h3{
-    color: #2E5A88;
+    color: black;
 }
+
 /* Contact end  */
 
 /*  Iamge start */
 .back-img {
-    width: 100%;
-}
+    height: 400px;
+    background: url(../images/image5.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 /*Iamge end */
 
 /*Footer section start */
@@ -158,3 +221,146 @@ footer h2{
 }
 /* Footer section end  */
 }
+
+
+
+
+
+
+@media(max-width:400px)
+{
+    .home .person{
+        margin-left:-18%;
+    }
+    .header .logo i{
+        margin-left: 90%;
+    } 
+    .contact .container .contactForm{
+        width: 100%;
+      }
+      .contact .container .contactinfo .box .text b{
+        font-size: 16px;
+      }
+      .contact{
+        padding: 75px 0px;
+      }
+      footer .nav li{
+        margin: 0px 5px;
+      }
+}
+
+
+@media(max-width:300px)
+{
+    .home .person{
+        margin-left:-50%;
+    }
+    .header .logo i{
+        margin-left: 80%;
+    } 
+    .home .person .person-img{
+        height: 200px;
+        width: 200px;
+      }
+      .home .home-content h3{
+        font-size: 20px;
+      }
+      .home .home-content h1{
+        font-size: 35px;
+      }
+      .home .home-content span{
+        font-size: 20px;
+      }
+      .home .home-content p{
+        font-size: 18px;
+      }
+      .home .home-content .btn-box{
+        padding: 10px 18px;
+        
+      }
+      .about-section .my-profile .profile-section-1 h2{
+        font-size: 30px;
+      }
+      .about-section .my-profile .profile-section-2{
+        padding: 20px 0px 0px 0px;
+      }
+      .about-section .my-profile .profile-section-2 .part-1 .content{
+        padding: 10px 0px;
+      }
+      .skills-department h2{
+        font-size:30px;
+      }
+      .skills-department .skills-row .skill-card .text{
+        font-size: 18px;
+      }
+      .container4 .col .title h2{
+        font-size: 30px;
+      }
+      .main-project .project-middle .project-item .project-list1{
+        height: 200px;
+      }
+      .main-project .project-head h2 {
+        font-size:30px;
+        margin-top: 30px;
+      }
+      .contact .content h2{
+        font-size: 30px;
+      }
+      .contact .container .contactinfo .box .icon{
+        min-width: 40px;
+        height: 40px;
+        font-size: 18px;
+      }
+      .contact .container .contactinfo .box .text b{
+        font-size: 14px;
+      }
+      .contact .container .contactForm .inputBox{
+        margin-top: 0px;
+      }
+      .contact .container .contactForm h2{
+        font-size: 20px;
+      }
+
+      .back-img {
+        height: 400px;
+        background: url(../images/image5.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
+      footer .nav li{
+        margin: 0px 5px;
+      }
+      footer h2{
+        font-size: 12px;
+      }
+      footer .nav li{
+        margin: 0px 3px;
+        font-size: 13px;
+      }
+      footer p{
+        font-size: 13px;
+      }
+      
+     
+
+      
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
