--- a/PROJECT/portfolio-project/flex-media/css/style.css
+++ b/PROJECT/portfolio-project/flex-media/css/style.css
@@ -22,7 +22,7 @@ body{
 .banner .header .header-top .left .mail
 {
     width: 50%;
-    padding-left: 150px;
+    padding-left: 80px;
     padding-top: 15px;
     border-right: 1px solid #e5e5e5;
 }
@@ -210,7 +210,7 @@ body{
     display: inline-block;
     text-align: center;
     background-color: black;
-    padding: 14px 30px 14px 30px;
+    padding: 14px 28px 14px 28px;
     cursor: pointer;
     font-size: 18px;
     position: relative;
@@ -451,8 +451,8 @@ body{
     padding: 11px 30px;
     background: white;
     position: absolute;
-    top: 100px;
-    left: 150px;
+    top: 40%;
+    left: 35%;
 }
 .banner .banner-3 .women .gender-women::after{
     content: "";
@@ -484,8 +484,8 @@ body{
     padding: 11px 30px;
     background: white;
     position: absolute;
-    top: 100px;
-    left: 170px;
+    top: 40%;
+    left: 38%;
 }
 .banner .banner-3 .kid .gender-kid::after{
     content: "";
