--- a/PROJECT/portfolio-project/grid-media/css/style.css
+++ b/PROJECT/portfolio-project/grid-media/css/style.css
@@ -55,7 +55,7 @@ body
     font-size: 17px;
     color: black;
     font-weight: 500;
-    padding: 25px 15px 25px 15px;
+    padding: 25px 12px 25px 12px;
 }
 .banner .header .nav li a:hover{
     color: blue;
@@ -269,11 +269,11 @@ body
     position: absolute;
     top: 10%;
     left: 0%;
-    transition: 0.5s;
-    visibility: hidden;
+    transition: 0.7s;
+    opacity: 0;
 }
 .banner .banner-3 .image1:hover .effect{
-    visibility: visible;
+    opacity: 1;
     top: 0%;
 }
 .banner .banner-3 .image1 .item{
@@ -300,11 +300,11 @@ body
     position: absolute;
     top: 10%;
     left: -2%;
-    transition: 0.5s;
-    visibility: hidden;
+    transition: 0.7s;
+    opacity: 0;
 }
 .banner .banner-3 .image2:hover .effect{
-    visibility: visible;
+    opacity: 1;
     top: 0%;
 }
 .banner .banner-3 .image2 .item{
@@ -330,11 +330,11 @@ body
     position: absolute;
     top: 10%;
     left: 0%;
-    transition: 0.5s;
-    visibility: hidden;
+    transition: 0.7s;
+    opacity: 0;
 }
 .banner .banner-3 .image3:hover .effect{
-    visibility: visible;
+    opacity: 1;
     top: 0%;
 }
 .banner .banner-3 .image3 .item{
@@ -612,6 +612,9 @@ body
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 500px;  
     grid-gap: 25px;
+}
+.banner .banner-7 .news-container .part3{
+    display: block;
 }
 .banner .banner-7 .news-container .news{
     position: relative;
